# rust-uefi-template

./: .editorconfig  .gitignore  .run_qemu.sh  Cargo.toml  Makefile  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
nix/: gitignore.nix  release.nix  sources.json
src/: lib.rs  main.rs
ws/uefi_app/: Cargo.toml
ws/uefi_app/src/: main.rs
ws/uefi_lib/: Cargo.toml
ws/uefi_lib/src/: lib.rs
