[workspace]
members = [
    "ws/uefi_app",
    "ws/uefi_lib",
]

# Required, otherwise cargo adds "non-std" features of some crates due to "smart feature resolvement".
# Somewhen in the future perhaps not required anymore.
# https://rustwiki.org/en/cargo/reference/features.html
resolver = "2"

[workspace.dependencies]
log = { version = "0.4", default-features = false }


[profile.release]
lto = true
codegen-units = 1
